# python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: security.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
docs/: mint.json
docs/api-reference/: chat.mdx  client.mdx
docs/guides/: authentication.mdx  embeddings.mdx  error-handling.mdx  installation.mdx  on-prem.mdx  quickstart.mdx  streaming.mdx
kitefishai/: __init__.py  _client.py  _exceptions.py
kitefishai/resources/: __init__.py  chat.py  embeddings.py
kitefishai/types/: __init__.py
tests/: test_chat.py  test_client.py  test_embeddings.py  test_types.py
