[tool.poetry]
name = "kitefishai"
version = "0.1.0"
description = "KiteFishAI Python SDK "
authors = ["KiteFishAI <anuj@kitefishai.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://kitefishai.com"
repository = "https://github.com/kitefishai/python-sdk"
documentation = "https://docs.kitefishai.com"
keywords = ["ai", "llm", "embeddings", "kitefish", "india", "bfsi"]
packages = [{ include = "kitefishai" }]


[tool.poetry.dependencies]
python = ">=3.10"
httpx = ">=0.25.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-mock = "*"
respx = "*"
black = "*"
ruff = "*"
mypy = "*"


[project.urls]
Homepage = "https://kitefishai.com"
Documentation = "https://kitefishai.com/docs/sdk"
Repository = "https://github.com/KiteFishAI/kitefishai-python"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
